[package]
name = "csv-detect-missing"
version = "1.0.0-alpha"
authors = ["Zoltan Kovari"]
repository = "https://github.com/zkoevaari/csv-detect-missing.git"
license = "Apache-2.0"
edition = "2021"

[dependencies]
chrono = "0.4"
clap = {version = "4.5", default-features = false, features = ["cargo", "error-context", "help", "std", "suggestions", "usage"]}
