[package]
name = "csv-detect-missing"
version = "1.0.0-alpha.2"
authors = ["Zoltan Kovari"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/zkoevaari/csv-detect-missing.git"

[dependencies]
chrono = "0.4"

[dependencies.clap]
version = "4.5"
default-features = false
features = [
    "cargo",
    "error-context",
    "help",
    "std",
    "suggestions",
    "usage",
]
